samples/_failures_safe/1761606806_4a1ded_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8e17bf5.c: In function ‘main’:
./samples/SAFE/__tmp_c8e17bf5.c:137:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  137 |     int entry
      |     ^~~
./samples/SAFE/__tmp_c8e17bf5.c:137:5: error: expected declaration or statement at end of input
